--- a/mappings/package_F03/transformation/technical_mappings.yarrrml.yaml
+++ b/mappings/package_F03/transformation/technical_mappings.yarrrml.yaml
@@ -5,7 +5,7 @@ prefixes:
 mappings:
   buyer:
     sources:
-      - [source.xml~xpath, /TED_EXPORT]
+      - [../../data/source.xml~xpath, /TED_EXPORT]
     s:
       function: grel:array_join
       parameters:
@@ -49,7 +49,7 @@ mappings:
 
   buyerprofile:
     sources:
-      - [source.xml~xpath, /TED_EXPORT]
+      - [../../data/source.xml~xpath, /TED_EXPORT]
     s:
       function: grel:array_join
       parameters:
@@ -65,7 +65,7 @@ mappings:
    
   organisation:
     sources:
-      - [source.xml~xpath, /TED_EXPORT]
+      - [../../data/source.xml~xpath, /TED_EXPORT]
     s:
       function: grel:array_join
       parameters:
@@ -104,7 +104,7 @@ mappings:
   
   channel:
     sources:
-      - [source.xml~xpath, /TED_EXPORT]
+      - [../../data/source.xml~xpath, /TED_EXPORT]
     s:
       function: grel:array_join
       parameters:
@@ -123,7 +123,7 @@ mappings:
   
   contactPoint:
     sources:
-      - [source.xml~xpath, /TED_EXPORT]
+      - [../../data/source.xml~xpath, /TED_EXPORT]
     s:
       function: grel:array_join
       parameters:
@@ -155,7 +155,7 @@ mappings:
      
   address:
     sources:
-      - [source.xml~xpath, /TED_EXPORT]
+      - [../../data/source.xml~xpath, /TED_EXPORT]
     s:
       function: grel:array_join
       parameters:
